tests/machine/x/rust/map_int_key.error
line 0: compile: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/map_int_key.rs:3:24
  |
3 |     println!("{:?}", m[1]);
  |                        ^ expected `&{integer}`, found integer
  |
help: consider borrowing here
  |
3 |     println!("{:?}", m[&1]);
  |                        +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

fn main() {
